# dummy_ml_ai_core

./: Dockerfile  README.md  best_rf_iris_model.pkl  pyproject.toml
app/: app.py  model.joblib  requirements.txt  train_model.py
ml_model/: Dockerfile  requirements.txt  train.py
serving-templates/: mode-workflow.yaml  penguin-serving-template.yaml
