[tool.poetry]
name = "dummy-ml-ai-core"
version = "0.1.0"
description = ""
authors = ["jdbernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
