[tool.poetry]
name = "dummy-ml-ai-core"
version = "0.1.0"
description = ""
authors = ["jdbernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
taskipy = "^1.14.1"


[tool.poetry.group.model.dependencies]
scikit-learn = "^1.6.1"
taskipy = "^1.14.1"
pandas = "^2.2.3"


[tool.poetry.group.server.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.12"}
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
